Update lifetime_cycle.ipynb to make it more cookbooky
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -39,11 +39,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "from pylife.core.broadcaster import Broadcaster\n",
     "from pylife.stress.histogram import *\n",
     "import pylife.stress.timesignal as ts\n",
     "from pylife.stress.rainflow import *\n",
     "import pylife.stress.equistress\n",
     "\n",
+    "import pylife.stress.rainflow\n",
     "import pylife.strength.meanstress\n",
     "from pylife.strength import miner\n",
     "from pylife.strength import sn_curve\n",
@@ -55,7 +57,7 @@
     "\n",
     "from pylife.materialdata.woehler.diagrams.woehler_curve_diagrams import WoehlerCurveDiagrams\n",
     "\n",
-    "import pylife.mesh.meshsignal\n",
+    "import pylife.mesh.meshplot\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
@@ -98,27 +100,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(4711)\n",
     "t = np.linspace(0,60,60*2048)\n",
-    "files = ['wn','sine']\n",
-    "wn = pd.DataFrame(index = t, columns = ['sensor_1'], data = 120*np.random.randn(len(t)))\n",
-    "sine = pd.DataFrame(index = t, columns = ['sensor_1'], data = 80*np.sin(2*np.pi*50*t))\n",
-    "input_data = [wn,sine]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input_data = []\n",
-    "# for upload in files:\n",
-    "#     data_akt = pd.read_csv(data_loc + upload, sep = \",\")\n",
-    "#     if len(data_akt.columns) == 1:\n",
-    "#         print ('please use \",\" as seperator next time')\n",
-    "#         data_akt = pd.read_csv(data_loc + upload, sep = \";\")\n",
-    "#         input_data.append(data_akt)\n",
-    "#     print(upload + \" imported succesfully\")"
+    "\n",
+    "signals = {\n",
+    "    'wn': pd.DataFrame(index = t, columns = ['sensor_1'], data = 120*np.random.randn(len(t))),\n",
+    "    'sine': pd.DataFrame(index = t, columns = ['sensor_1'], data = 80*np.sin(2*np.pi*50*t))\n",
+    "}"
    ]
   },
   {
@@ -134,13 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_resample = widgets.FloatText(value = 1024,min=1,max=100e3,step=1,\n",
-    "    description='Resampling frequency [Hz]',\n",
-    "    disabled=False,readout=True,readout_format='d')\n",
-    "display(f_resample)\n",
-    "# select time column\n",
-    "# timeColumn = widgets.Dropdown(options = data_akt.columns)\n",
-    "# display(timeColumn)"
+    "resampling_freq = 1024"
    ]
   },
   {
@@ -149,21 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meas_resample = []\n",
-    "for file_act in input_data:\n",
-    "#     file_act = file_act.set_index(timeColumn.value)\n",
-    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(f_resample.value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"select channel to plot\")\n",
-    "plotChan = widgets.Dropdown(options = file_act.columns)\n",
-    "display(plotChan)"
+    "meas_resample = {k: ts.TimeSignalPrep(signal).resample_acc(resampling_freq) for k, signal in signals.items()}"
    ]
   },
   {
@@ -174,13 +142,8 @@
    "source": [
     "fig, ax = plt.subplots(len(meas_resample))\n",
     "fig.suptitle('Resampled input data')\n",
-    "ii = 0\n",
-    "for df_act in meas_resample:\n",
-    "    if len(meas_resample) == 1:\n",
-    "        ax.plot(df_act.index, df_act[plotChan.value])  \n",
-    "    else:\n",
-    "        ax[ii].plot(df_act.index, df_act[plotChan.value])\n",
-    "    ii += 1"
+    "for ax, (key, signal) in zip(ax, meas_resample.items()):\n",
+    "    ax.plot(signal.index, signal)"
    ]
   },
   {
@@ -196,10 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_min = widgets.FloatText(value = 5,description='min frequency [Hz]',disabled=False)\n",
-    "f_max = widgets.FloatText(value = 100,description='max frequency [Hz]',disabled=False)\n",
-    "display(f_min)\n",
-    "display(f_max)"
+    "f_min = 5.0  # Hz\n",
+    "f_max = 100.0  #Hz"
    ]
   },
   {
@@ -208,12 +169,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bandpass = []\n",
-    "for df_act in meas_resample:\n",
+    "bandpass = {}\n",
+    "for k, df_act in meas_resample.items():\n",
     "    bandpassDF = pd.DataFrame(index = df_act.index)\n",
     "    for col_act in df_act.columns:\n",
-    "        bandpassDF[col_act] = ts.TimeSignalPrep(df_act[col_act]).butter_bandpass(f_min.value,f_max.value,f_resample.value,5)\n",
-    "    bandpass.append(bandpassDF) \n",
+    "        bandpassDF[col_act] = ts.TimeSignalPrep(df_act[col_act]).butter_bandpass(f_min, f_max, resampling_freq, 5)\n",
+    "    bandpass[k] = bandpassDF\n",
+    "    \n",
     "display(bandpassDF)"
    ]
   },
@@ -230,23 +192,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"select channel to for running stats\")\n",
-    "runChan = widgets.Dropdown(options = df_act.columns)\n",
-    "display(runChan)\n",
-    "print(\" Running statistics method\")\n",
-    "method_choice = widgets.Dropdown(options = ['rms','max','min','abs'])\n",
-    "display(method_choice)\n",
+    "statistics_method = 'rms'  # alternatively 'max', 'min', 'abs'\n",
     "\n",
-    "paraRunStats = ['window_length', 'buffer_overlap', 'limit']\n",
-    "values = [800,0.1,0.015]\n",
-    "child = [widgets.FloatText(description=name) for name in paraRunStats]\n",
-    "tab = widgets.Tab()\n",
-    "tab.children = child\n",
-    "for i in range(len(child)):\n",
-    "    tab.set_title(i, paraRunStats[i])\n",
-    "    tab.children[i].value = values[i]\n",
+    "run_statt = 'window_length' # alternatively 'buffer_overlap', 'limit'\n",
     "\n",
-    "tab"
+    "window_length = 800\n",
+    "buffer_overlap = 1\n",
+    "limit = 0.15"
    ]
   },
   {
@@ -256,27 +208,15 @@
    "outputs": [],
    "source": [
     "\"\"\" Running statistics to drop out zero values \"\"\"\n",
-    "cleaned = []\n",
-    "for df_act in bandpass:\n",
+    "cleaned = {}\n",
+    "for k, df_act in bandpass.items():\n",
     "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(\n",
     "                            col = runChan.value,\n",
     "                            window_length = int(tab.children[0].value),\n",
     "                            buffer_overlap = int(tab.children[1].value),\n",
     "                            limit = tab.children[2].value,\n",
     "                            method = method_choice.value)\n",
-    "    cleaned.append(cleaned_df)\n",
-    "# display(cleaned_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"select channel to plot\")\n",
-    "plotChan = widgets.Dropdown(options = file_act.columns)\n",
-    "display(plotChan)"
+    "    cleaned[k] = cleaned_df"
    ]
   },
   {
@@ -287,11 +227,8 @@
    "source": [
     "fig, ax = plt.subplots(len(meas_resample))\n",
     "fig.suptitle('Cleaned input data')\n",
-    "for i, df_act in enumerate(cleaned):\n",
-    "    if len(meas_resample) == 1:\n",
-    "        ax.plot(df_act.index, df_act[plotChan.value])  \n",
-    "    else:\n",
-    "        ax[i].plot(df_act.index, df_act[plotChan.value])  "
+    "for ax, (k, df_act) in zip(ax, cleaned.items()):\n",
+    "    ax.plot(df_act.index, df_act['sensor_1'])"
    ]
   },
   {
@@ -307,10 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfcChan = widgets.Dropdown(options = df_act.columns)\n",
-    "display(rfcChan)\n",
-    "binwidget = widgets.IntSlider(value = 64, min=1, max=1024, step=1,description='Bins:')\n",
-    "display(binwidget)"
+    "rainflow_bins = 64"
    ]
   },
   {
@@ -319,11 +253,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rainflow = []\n",
-    "for df_act in cleaned:\n",
+    "rainflow = {}\n",
+    "for k, df_act in cleaned.items():\n",
     "    rfc = RainflowCounterFKM().process(df_act[rfcChan.value].values)\n",
-    "    rfm = rfc.get_rainflow_matrix_frame(binwidget.value)\n",
-    "    rainflow.append(rfm)"
+    "    rfm = rfc.get_rainflow_matrix_frame(rainflow_bins).loc[:, 0]\n",
+    "    rainflow[k] = rfm"
    ]
   },
   {
@@ -338,7 +272,7 @@
     "fig = plt.figure(figsize = (8,11))\n",
     "fig.suptitle('Rainflow of Channel ' + rfcChan.value)\n",
     "\n",
-    "for i, rf_act in enumerate(rainflow):\n",
+    "for i, (k, rf_act) in enumerate(rainflow.items()):\n",
     "    # 2D\n",
     "    ax = fig.add_subplot(3,2,2*(i+1)-1)\n",
     "    froms = rf_act.index.get_level_values('from').mid\n",
@@ -374,16 +308,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meanstress_para = ['M', 'M2', 'R_Goal']\n",
-    "values = [0.3,0.2,-1]\n",
-    "child = [widgets.FloatText(description=name) for name in meanstress_para]\n",
-    "tab_mean = widgets.Tab()\n",
-    "tab_mean.children = child\n",
-    "for i in range(len(child)):\n",
-    "    tab_mean.set_title(i, meanstress_para[i])\n",
-    "    tab_mean.children[i].value = values[i]\n",
-    "\n",
-    "tab_mean"
+    "meanstress_sensitivity = pd.Series({\n",
+    "    'M': 0.3,\n",
+    "    'M2': 0.2\n",
+    "})"
    ]
   },
   {
@@ -392,11 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformed = []\n",
-    "for rf_act in rainflow:\n",
-    "    transformed.append(rf_act.meanstress_hist.FKM_goodman(pd.Series({'M': tab_mean.children[0].value, \n",
-    "                                                                     'M2': tab_mean.children[1].value})\n",
-    "                                                          , R_goal = tab_mean.children[2].value))"
+    "transformed = {k: rf_act.meanstress_hist.FKM_goodman(meanstress_sensitivity, R_goal=-1.) for k, rf_act in rainflow.items()}"
    ]
   },
   {
@@ -412,13 +336,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "child = [widgets.FloatText(description=name) for name in files]\n",
-    "tab_repeat = widgets.Tab()\n",
-    "tab_repeat.children = child\n",
-    "for i in range(len(child)):\n",
-    "    tab_repeat.set_title(i, files[i])\n",
-    "    tab_repeat.children[i].value = int(50/(i+1))\n",
-    "tab_repeat"
+    "repeating = {\n",
+    "    'wn': 50.0, \n",
+    "    'sine': 25.0\n",
+    "}"
    ]
   },
   {
@@ -427,10 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ii in range(len(files)): \n",
-    "    transformed[ii] = transformed[ii]*tab_repeat.children[ii].value\n",
-    "range_only_total = combine_hist(transformed,method = \"sum\")\n",
-    "display(range_only_total)    "
+    "transformed['total'] = combine_hist([transformed[k] * repeating[k] for k in ['wn', 'sine']], method=\"sum\")"
    ]
   },
   {
@@ -440,23 +358,17 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=2,figsize=(10, 5))\n",
-    "# plot total\n",
-    "amplitude = range_only_total.index.get_level_values('range').left.values[::-1]/2\n",
-    "cycles = range_only_total.values[::-1].ravel()\n",
-    "ax[0].step(cycles,amplitude,c = \"black\",linewidth = 3, label = \"total\")\n",
-    "ax[1].step(np.cumsum(cycles),amplitude,c = \"black\",linewidth = 3, label = \"total\")\n",
-    "ii = 0\n",
-    "for range_only in transformed:\n",
-    "    amplitude = range_only.index.get_level_values('range').mid.values[::-1]/2\n",
-    "    cycles = range_only.values[::-1].ravel()\n",
-    "    ax[0].step(cycles,amplitude,label = files [ii])\n",
-    "    ax[1].step(np.cumsum(cycles),amplitude,label = files [ii])\n",
-    "    ii += 1\n",
-    "ax[0].set_title('Count')\n",
-    "ax[1].set_title('Cumulated sum count')\n",
-    "ax[1].legend()\n",
-    "for ai in ax:\n",
+    "\n",
+    "for k, range_only in transformed.items():\n",
+    "    ampl = range_only.rainflow.amplitude[::-1]\n",
+    "    cyc = range_only.values[::-1].ravel()\n",
+    "    ax[0].step(cyc, ampl, label=k)\n",
+    "    ax[1].step(np.cumsum(cyc), ampl, label=k)\n",
+    "\n",
+    "for title, ai in zip(['Count', 'Cumulated'], ax):\n",
+    "    ai.set_title(title)\n",
     "    ai.xaxis.grid(True)\n",
+    "    ai.legend()\n",
     "    ai.set_xlabel('count')\n",
     "    ai.set_ylabel('amplitude of ' + rfcChan.value)\n",
     "    ai.set_ylim((0,max(amplitude)))  "
@@ -483,8 +395,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat = pd.Series(index = ['k_1', 'ND_50', 'SD_50', '1/TN', '1/TS'],\n",
-    "                data = [8, 1.5e+06, 1.5e+02, 12, 1.1])\n",
+    "mat = pd.Series({\n",
+    "    'k_1': 8.,\n",
+    "    'ND': 1.0e6,\n",
+    "    'SD': 150.0,\n",
+    "    'TN': 1./12.,\n",
+    "    'TS': 1./1.1\n",
+    "})\n",
     "display(mat)"
    ]
   },
@@ -501,8 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SNmethod = widgets.Dropdown(options = ['Miner Elementar','Miner Haibach','Miner original'])\n",
-    "display(SNmethod)"
+    "damage = mat.fatigue.damage(transformed['total'].rainflow)\n",
+    "damage.sum()"
    ]
   },
   {
@@ -511,24 +428,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage_calc = sn_curve.FiniteLifeCurve(**mat.drop(['1/TN','1/TS']))\n",
-    "damage = damage_calc.calc_damage(range_only_total,method = 'original')\n",
-    "# display(damage)\n",
-    "print(\"\\033[5m  Total Damage of channel %s: %.2e  \\033[0m\" % (rfcChan.value,damage.sum()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SRI = mat['SD_50']*(mat['ND_50']**(1/mat['k_1']))\n",
-    "# Plotting\n",
-    "diagdata = WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,\n",
-    "                                y_min=2, y_max=SRI, x_min=1e1, x_max=1e12, ax = None)\n",
-    "diagdata.plot_fitted_curve( k_2=15)\n",
-    "plt.step(np.cumsum(cycles),2*amplitude)\n"
+    "wc = mat.woehler\n",
+    "cyc = pd.Series(np.logspace(1, 12, 200))\n",
+    "for pf, style in zip([0.1, 0.5, 0.9], ['--', '-', '--']):\n",
+    "    load = wc.basquin_load(cyc, failure_probability=pf)\n",
+    "    plt.plot(cyc, load, style)\n",
+    "\n",
+    "plt.step(np.cumsum(cycles), 2*amplitude)\n",
+    "\n",
+    "plt.loglog()"
    ]
   },
   {
@@ -553,19 +461,20 @@
    "source": [
     "D50 = 0.05\n",
     "d = damage.sum()\n",
-    "di = np.logspace(np.log10(1e-1*d),np.log10(1e3*d),1000).flatten()\n",
-    "std = np.log10(mat['1/TN'])/2.5631031311\n",
+    "di = np.logspace(np.log10(1e-1*d),np.log10(1e3*d),1000)\n",
+    "std = pylife.utils.functions.scatteringRange2std(mat.TN)\n",
     "failprob = fp.FailureProbability(D50,std).pf_simple_load(di)\n",
-    "#print(failprob)\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "ax.semilogx(di, failprob, label='cdf')\n",
-    "ax.vlines(d, max(failprob), fp.FailureProbability(D50,std).pf_simple_load(d))\n",
-    "# \n",
+    "\n",
     "plt.xlabel(\"Damage\")\n",
     "plt.ylabel(\"cdf\")\n",
     "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50,std).pf_simple_load(d))  \n",
     "plt.ylim(0,max(failprob))\n",
-    "plt.xlim(min(di),max(di))"
+    "plt.xlim(min(di),max(di))\n",
+    "\n",
+    "fp.FailureProbability(D50,std).pf_simple_load(d)"
    ]
   },
   {
@@ -621,9 +530,7 @@
     "               .join_coordinates()\n",
     "               .join_variable('STRESS_CAUCHY')\n",
     "               .join_variable('DISPLACEMENT')\n",
-    "               .to_frame())\n",
-    "\n",
-    "pyLife_mesh.sample(10)"
+    "               .to_frame())\n"
    ]
   },
   {
@@ -632,13 +539,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Equivalent stress range\n",
-    "pyLife_mesh['mises'] = 2*pyLife_mesh.equistress.mises()\n",
-    "# Scaling with amplitude\n",
-    "pyLife_mesh['mises'] = 2*pyLife_mesh['mises']/pyLife_mesh['mises'].max()\n",
-    "ampl_fe = pd.DataFrame(data = amplitude, columns = [\"ampl\"] ,index =cycles)\n",
-    "s_vm_scaled = pd.DataFrame(data = ampl_fe.values*pyLife_mesh['mises'].transpose().values,index = ampl_fe.index,columns = pyLife_mesh['mises'].index)\n",
-    "display(s_vm_scaled)"
+    "mises = pyLife_mesh.groupby('element_id')['S11', 'S22', 'S33', 'S12', 'S13', 'S23'].mean().equistress.mises()\n",
+    "mises *= 2./mises.max()\n",
+    "#mises"
    ]
   },
   {
@@ -654,12 +557,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = damage_calc.calc_N(s_vm_scaled,ignore_limits = True)\n",
-    "d_mesh_cycle =  1/(N.div(N.index.values, axis = 'index'))\n",
-    "#np.sum(data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]].values/N)\n",
-    "\n",
-    "d_mesh = d_mesh_cycle.sum()\n",
-    "display(d_mesh)"
+    "scaled_rainflow = range_only_total.rainflow.scale(mises)\n",
+    "#scaled_rainflow.amplitude, scaled_rainflow.frequency"
    ]
   },
   {
@@ -668,8 +567,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyLife_mesh = pyLife_mesh.join(pd.DataFrame(data = d_mesh,columns = ['d']))\n",
-    "display(pyLife_mesh)"
+    "damage = mat.fatigue.damage(scaled_rainflow)\n",
+    "#damage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "damage = damage.groupby(['element_id']).sum()\n",
+    "#damage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pyLife_mesh = pyLife_mesh.join(damage)\n",
+    "#display(pyLife_mesh)"
    ]
   },
   {
@@ -680,7 +599,7 @@
    "source": [
     "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
     "plotter = pv.Plotter(window_size=[1920, 1080])\n",
-    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')['mises'].mean().to_numpy(),\n",
+    "plotter.add_mesh(grid, scalars=damage.to_numpy(),\n",
     "                show_edges=True, cmap='jet')\n",
     "plotter.add_scalar_bar()\n",
     "plotter.show()"
@@ -692,13 +611,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Maximal damage sum: %f\" % d_mesh.max())"
+    "print(\"Maximal damage sum: %f\" % damage.max())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
