--- a/demos/stress_gradient.ipynb
+++ b/demos/stress_gradient.ipynb
@@ -24,7 +24,10 @@
     "import pylife.mesh.gradient\n",
     "import pylife.vmap\n",
     "\n",
-    "import pyvista as pv"
+    "import pyvista as pv\n",
+    "\n",
+    "pv.set_plot_theme('document')\n",
+    "pv.set_jupyter_backend('panel')"
    ]
   },
   {
@@ -44,7 +47,6 @@
     "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
     "               .join_coordinates()\n",
     "               .join_variable('STRESS_CAUCHY')\n",
-    "               .join_variable('DISPLACEMENT')\n",
     "               .to_frame())"
    ]
   },
@@ -77,7 +79,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pyLife_mesh[\"grad\"] = pyLife_mesh.gradient.gradient_of('mises')\n",
     "grad = pyLife_mesh.gradient.gradient_of('mises')"
    ]
   },
@@ -87,9 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyLife_nodes = pd.concat([pyLife_mesh.groupby('node_id').mean(), grad], axis=1)\n",
-    "pyLife_nodes[\"abs_grad\"] = np.linalg.norm(grad,axis = 1)\n",
-    "display(pyLife_nodes)\n"
+    "grad[\"abs_grad\"] = np.linalg.norm(grad, axis = 1)\n",
+    "pyLife_mesh = pyLife_mesh.join(grad)\n",
+    "display(pyLife_mesh)\n"
    ]
   },
   {
@@ -98,15 +99,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
-    "mesh.point_arrays[\"abs_grad\"] = pyLife_nodes[\"abs_grad\"].values\n",
-    "mesh.plot(scalars=\"abs_grad\",log_scale = False)"
+    "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
+    "plotter = pv.Plotter(window_size=[1920, 1080])\n",
+    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')[\"abs_grad\"].mean().to_numpy(),\n",
+    "                show_edges=True, cmap='jet')\n",
+    "plotter.add_scalar_bar()\n",
+    "plotter.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyLife_mesh.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -119,8 +139,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython3"
   },
   "name": "stress_gradient.ipynb"
  },
