Further simplification of lifetime_calc.ipynb
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -39,7 +39,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from pylife.core.broadcaster import Broadcaster\n",
     "from pylife.stress.histogram import *\n",
     "import pylife.stress.timesignal as ts\n",
     "from pylife.stress.rainflow import *\n",
@@ -47,17 +46,15 @@
     "\n",
     "import pylife.stress.rainflow\n",
     "import pylife.strength.meanstress\n",
-    "from pylife.strength import miner\n",
-    "from pylife.strength import sn_curve\n",
-    "from pylife.strength.miner import MinerElementar, MinerHaibach\n",
+    "import pylife.strength.fatigue\n",
+    "\n",
+    "import pylife.mesh.meshsignal\n",
+    "\n",
     "from pylife.strength import failure_probability as fp\n",
     "import pylife.vmap\n",
     "\n",
     "import pyvista as pv\n",
     "\n",
-    "from pylife.materialdata.woehler.diagrams.woehler_curve_diagrams import WoehlerCurveDiagrams\n",
-    "\n",
-    "import pylife.mesh.meshplot\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
@@ -65,11 +62,6 @@
     "\n",
     "from scipy.stats import norm\n",
     "\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets\n",
-    "import io\n",
-    "from IPython.display import HTML\n",
-    "import base64 \n",
     "\n",
     "# mpl.style.use('seaborn')\n",
     "# mpl.style.use('seaborn-notebook')\n",
@@ -104,8 +96,8 @@
     "t = np.linspace(0,60,60*2048)\n",
     "\n",
     "signals = {\n",
-    "    'wn': pd.DataFrame(index = t, columns = ['sensor_1'], data = 120*np.random.randn(len(t))),\n",
-    "    'sine': pd.DataFrame(index = t, columns = ['sensor_1'], data = 80*np.sin(2*np.pi*50*t))\n",
+    "    'wn': pd.DataFrame(index = t, columns = ['sensor_1'], data = 240*np.random.randn(len(t))),\n",
+    "    'sine': pd.DataFrame(index = t, columns = ['sensor_1'], data = 160*np.sin(2*np.pi*50*t))\n",
     "}"
    ]
   },
@@ -197,7 +189,7 @@
     "run_statt = 'window_length' # alternatively 'buffer_overlap', 'limit'\n",
     "\n",
     "window_length = 800\n",
-    "buffer_overlap = 1\n",
+    "buffer_overlap = 0.1\n",
     "limit = 0.15"
    ]
   },
@@ -211,11 +203,11 @@
     "cleaned = {}\n",
     "for k, df_act in bandpass.items():\n",
     "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(\n",
-    "                            col = runChan.value,\n",
-    "                            window_length = int(tab.children[0].value),\n",
-    "                            buffer_overlap = int(tab.children[1].value),\n",
-    "                            limit = tab.children[2].value,\n",
-    "                            method = method_choice.value)\n",
+    "                            col=\"sensor_1\",\n",
+    "                            window_length=window_length,\n",
+    "                            buffer_overlap=buffer_overlap,\n",
+    "                            limit=limit,\n",
+    "                            method=statistics_method)\n",
     "    cleaned[k] = cleaned_df"
    ]
   },
@@ -255,7 +247,7 @@
    "source": [
     "rainflow = {}\n",
     "for k, df_act in cleaned.items():\n",
-    "    rfc = RainflowCounterFKM().process(df_act[rfcChan.value].values)\n",
+    "    rfc = RainflowCounterFKM().process(df_act['sensor_1'].values)\n",
     "    rfm = rfc.get_rainflow_matrix_frame(rainflow_bins).loc[:, 0]\n",
     "    rainflow[k] = rfm"
    ]
@@ -263,14 +255,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "colormap = cm.ScalarMappable()\n",
     "cmap = cm.get_cmap('PuRd')\n",
     "# fig, ax = plt.subplots(2,len(rainflow))\n",
     "fig = plt.figure(figsize = (8,11))\n",
-    "fig.suptitle('Rainflow of Channel ' + rfcChan.value)\n",
+    "fig.suptitle('Rainflow of Channel sensor_1')\n",
     "\n",
     "for i, (k, rf_act) in enumerate(rainflow.items()):\n",
     "    # 2D\n",
@@ -360,17 +354,17 @@
     "fig, ax = plt.subplots(nrows=1, ncols=2,figsize=(10, 5))\n",
     "\n",
     "for k, range_only in transformed.items():\n",
-    "    ampl = range_only.rainflow.amplitude[::-1]\n",
-    "    cyc = range_only.values[::-1].ravel()\n",
-    "    ax[0].step(cyc, ampl, label=k)\n",
-    "    ax[1].step(np.cumsum(cyc), ampl, label=k)\n",
+    "    amplitude = range_only.rainflow.amplitude[::-1]\n",
+    "    cycles = range_only.values[::-1].ravel()\n",
+    "    ax[0].step(cycles, amplitude, label=k)\n",
+    "    ax[1].step(np.cumsum(cycles), amplitude, label=k)\n",
     "\n",
     "for title, ai in zip(['Count', 'Cumulated'], ax):\n",
     "    ai.set_title(title)\n",
     "    ai.xaxis.grid(True)\n",
     "    ai.legend()\n",
     "    ai.set_xlabel('count')\n",
-    "    ai.set_ylabel('amplitude of ' + rfcChan.value)\n",
+    "    ai.set_ylabel('amplitude')\n",
     "    ai.set_ylim((0,max(amplitude)))  "
    ]
   },
@@ -398,7 +392,7 @@
     "mat = pd.Series({\n",
     "    'k_1': 8.,\n",
     "    'ND': 1.0e6,\n",
-    "    'SD': 150.0,\n",
+    "    'SD': 300.0,\n",
     "    'TN': 1./12.,\n",
     "    'TS': 1./1.1\n",
     "})\n",
@@ -418,8 +412,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage = mat.fatigue.damage(transformed['total'].rainflow)\n",
-    "damage.sum()"
+    "damage_miner_original = mat.fatigue.damage(transformed['total'].rainflow)\n",
+    "damage_miner_elementary = mat.fatigue.miner_elementary().damage(transformed['total'].rainflow)\n",
+    "damage_miner_haibach = mat.fatigue.miner_haibach().damage(transformed['total'].rainflow)\n",
+    "damage_miner_original.sum(), damage_miner_elementary.sum(), damage_miner_haibach.sum()"
    ]
   },
   {
@@ -434,7 +430,7 @@
     "    load = wc.basquin_load(cyc, failure_probability=pf)\n",
     "    plt.plot(cyc, load, style)\n",
     "\n",
-    "plt.step(np.cumsum(cycles), 2*amplitude)\n",
+    "plt.step(np.cumsum(cycles), transformed['total'].rainflow.amplitude[::-1])\n",
     "\n",
     "plt.loglog()"
    ]
@@ -461,9 +457,9 @@
    "source": [
     "D50 = 0.05\n",
     "d = damage.sum()\n",
-    "di = np.logspace(np.log10(1e-1*d),np.log10(1e3*d),1000)\n",
+    "di = np.logspace(np.log10(1e-2*d),np.log10(1e4*d),1000)\n",
     "std = pylife.utils.functions.scatteringRange2std(mat.TN)\n",
-    "failprob = fp.FailureProbability(D50,std).pf_simple_load(di)\n",
+    "failprob = fp.FailureProbability(D50, std).pf_simple_load(di)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.semilogx(di, failprob, label='cdf')\n",
@@ -529,7 +525,6 @@
     "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
     "               .join_coordinates()\n",
     "               .join_variable('STRESS_CAUCHY')\n",
-    "               .join_variable('DISPLACEMENT')\n",
     "               .to_frame())\n"
    ]
   },
@@ -540,7 +535,7 @@
    "outputs": [],
    "source": [
     "mises = pyLife_mesh.groupby('element_id')['S11', 'S22', 'S33', 'S12', 'S13', 'S23'].mean().equistress.mises()\n",
-    "mises *= 2./mises.max()\n",
+    "mises /= 200.0  # the nominal load level in the FEM analysis\n",
     "#mises"
    ]
   },
@@ -557,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_rainflow = range_only_total.rainflow.scale(mises)\n",
+    "scaled_rainflow = transformed['total'].rainflow.scale(mises)\n",
     "#scaled_rainflow.amplitude, scaled_rainflow.frequency"
    ]
   },
