Correction in lifetime_calc.ipynb
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -456,8 +456,10 @@
    "outputs": [],
    "source": [
     "D50 = 0.05\n",
-    "d = damage.sum()\n",
-    "di = np.logspace(np.log10(1e-2*d),np.log10(1e4*d),1000)\n",
+    "\n",
+    "damage = mat.fatigue.damage(transformed['total'].rainflow).sum()\n",
+    "\n",
+    "di = np.logspace(np.log10(1e-2*damage), np.log10(1e4*damage), 1000)\n",
     "std = pylife.utils.functions.scatteringRange2std(mat.TN)\n",
     "failprob = fp.FailureProbability(D50, std).pf_simple_load(di)\n",
     "\n",
@@ -466,11 +468,11 @@
     "\n",
     "plt.xlabel(\"Damage\")\n",
     "plt.ylabel(\"cdf\")\n",
-    "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50,std).pf_simple_load(d))  \n",
+    "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50,std).pf_simple_load(damage))  \n",
     "plt.ylim(0,max(failprob))\n",
-    "plt.xlim(min(di),max(di))\n",
+    "plt.xlim(min(di), max(di))\n",
     "\n",
-    "fp.FailureProbability(D50,std).pf_simple_load(d)"
+    "fp.FailureProbability(D50, std).pf_simple_load(damage)"
    ]
   },
   {
@@ -492,11 +494,11 @@
     "mat_pdf = norm.pdf(np.log10(di), loc=np.log10(D50), scale=std)\n",
     "ax.semilogx(di, mat_pdf, label='pdf_mat')\n",
     "# plot pdf of load\n",
-    "field_pdf = norm.pdf(np.log10(di), loc=np.log10(d), scale=field_std)\n",
+    "field_pdf = norm.pdf(np.log10(di), loc=np.log10(damage), scale=field_std)\n",
     "ax.semilogx(di, field_pdf, label='pdf_load',color = 'r')\n",
     "plt.xlabel(\"Damage\")\n",
     "plt.ylabel(\"pdf\")\n",
-    "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50,std).pf_norm_load(d,field_std))  \n",
+    "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50, std).pf_norm_load(damage, field_std))  \n",
     "plt.legend()"
    ]
   },
