Some tweaks to woehler_analyzer.ipynb
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wöhler analyzing tool\n",
+    "# Wöhler analyzing functions\n",
     "Developed by Mustapha Kassem in scope of a master thesis at TU München"
    ]
   },
@@ -123,11 +123,14 @@
    "outputs": [],
    "source": [
     "fatigue_data = df.fatigue_data\n",
-    "go.Figure([\n",
-    "    go.Scatter(x=fatigue_data.finite_zone.cycles, y=fatigue_data.finite_zone.load, mode='markers', name='finite'),\n",
-    "    go.Scatter(x=fatigue_data.infinite_zone.cycles, y=fatigue_data.infinite_zone.load, mode='markers', name='infinite'),\n",
-    "    go.Scatter(x=[df.cycles.min(), df.cycles.max()], y=[fatigue_data.fatigue_limit]*2, mode='lines', name='fatigue limit')\n",
-    "]).update_xaxes(type='log').update_yaxes(type='log').update_layout(xaxis_title='Cycles', yaxis_title='Load')"
+    "fatigue_data.fatigue_limit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can distinguish between the finite and infinite zones."
    ]
   },
   {
@@ -136,10 +139,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fatigue_data = df.fatigue_data\n",
+    "infinite_zone = fatigue_data.infinite_zone\n",
+    "finite_zone = fatigue_data.finite_zone\n",
+    "\n",
+    "go.Figure([\n",
+    "    go.Scatter(x=finite_zone.cycles, y=finite_zone.load, mode='markers', name='finite'),\n",
+    "    go.Scatter(x=infinite_zone.cycles, y=infinite_zone.load, mode='markers', name='infinite'),\n",
+    "    go.Scatter(x=[df.cycles.min(), df.cycles.max()], y=[fatigue_data.fatigue_limit]*2, mode='lines', name='fatigue limit')\n",
+    "]).update_xaxes(type='log').update_yaxes(type='log').update_layout(xaxis_title='Cycles', yaxis_title='Load')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can separate fractures from runouts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fractures = fatigue_data.fractures\n",
+    "runouts = fatigue_data.runouts\n",
+    "\n",
     "fig = go.Figure([\n",
-    "    go.Scatter(x=fatigue_data.fractures.cycles, y=fatigue_data.fractures.load, mode='markers', name='fractures'),\n",
-    "    go.Scatter(x=fatigue_data.runouts.cycles, y=fatigue_data.runouts.load, mode='markers', name='runouts'),\n",
+    "    go.Scatter(x=fractures.cycles, y=fractures.load, mode='markers', name='fractures'),\n",
+    "    go.Scatter(x=runouts.cycles, y=runouts.load, mode='markers', name='runouts'),\n",
     "    go.Scatter(x=[df.cycles.min(), df.cycles.max()], y=[fatigue_data.fatigue_limit]*2, mode='lines', name='fatigue limit')\n",
     "]).update_xaxes(type='log').update_yaxes(type='log').update_layout(xaxis_title='Cycles', yaxis_title='Load')\n",
     "fig"
@@ -354,6 +382,13 @@
     "\n",
     "maxlike_fixed_fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
