--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -118,8 +118,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython3"
   },
   "name": "psd_optimizer.ipynb"
  },
