--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -111,7 +111,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
   "name": "VMAP_io.ipynb"
  },
