--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -148,7 +148,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
