notebook time series handling is done
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Wöhler analyzing functions\n",
-    "Developed by Mustapha Kassem in scope of a master thesis at TU München"
+    "\n",
+    "<div style=\"text-align: right\"><img src=\"./dash-apps/pyLife_logo_20200219_FINAL_RGB.png\" width=\"250\" /></div>"
    ]
   },
   {
