--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -44,8 +44,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data import\n",
-    "#### Data is made up of two columns:\n",
+    "## Data import\n",
+    "### Data is made up of two columns:\n",
     " * The first column is made up of the load values\n",
     " * The scond column is made up of the load-cycle values\n",
     " "
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Guessing the fractures"
+    "### Guessing the fractures"
    ]
   },
   {
@@ -100,14 +100,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis"
+    "## Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparations"
+    "### Genaral preparations"
    ]
   },
   {
@@ -178,14 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Elementary\n",
+    "### Elementary analysis\n",
     "\n",
     "The `Elementary` analysis is the first step of the analysis. It determines the slope `k_1` in the finite region and the scatter in cycle region `TN` using the pearl chain method.\n",
     "\n",
@@ -408,7 +401,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   },
   "name": "woehler_analyzer.ipynb"
  },
