Rename `frequency` to `cycles` to describe load collectives
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -555,7 +555,7 @@
    "outputs": [],
    "source": [
     "scaled_rainflow = transformed['total'].rainflow.scale(mises)\n",
-    "#scaled_rainflow.amplitude, scaled_rainflow.frequency"
+    "#scaled_rainflow.amplitude, scaled_rainflow.cycles"
    ]
   },
   {
