* ``_ascii()`` replaced ``_to_bstring()`` and ``_decode_ascii_list()`` * demo.ipynb updated
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbclient/demo.ipynb
+++ b/tools/odbclient/demo.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instances = client.instances()\n",
-    "instances"
+    "instance_names = client.instance_names()\n",
+    "instance_names"
    ]
   },
   {
@@ -38,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = client.nodes(instances[0])"
+    "node_coordinates = client.node_coordinates(instance_names[0])\n",
+    "node_coordinates"
    ]
   },
   {
@@ -47,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steps = client.steps()\n",
-    "steps"
+    "step_name = client.step_names()[0]\n",
+    "step_name"
    ]
   },
   {
@@ -57,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.frames(steps[0])"
+    "client.frame_ids(step_name=step_name)"
    ]
   },
   {
@@ -66,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step = steps[0]\n",
-    "frame = client.frames(step)[-1]"
+    "frame_id = client.frame_ids(step_name=step_name)[-1]"
    ]
   },
   {
@@ -76,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.variable_names(step, frame)"
+    "client.variable_names(step_name=step_name,\n",
+    "                      frame_id=frame_id)"
    ]
   },
   {
@@ -85,7 +86,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.variable(instances[0], step, frame, 'S')"
+    "S = client.variable('S',\n",
+    "                    instance_name=instance_names[0],\n",
+    "                    step_name=step_name,\n",
+    "                    frame_id=frame_id)"
    ]
   },
   {
@@ -94,7 +98,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes.join(client.variable(instances[0], step, frame, 'S')).join(client.variable(instances[0], step, frame, 'EVOL'))"
+    "EVOL = client.variable('EVOL',\n",
+    "                        instance_name=instance_names[0],\n",
+    "                        step_name=step_name,\n",
+    "                        frame_id=frame_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_coordinates.join(S).join(EVOL)"
    ]
   },
   {
@@ -114,13 +130,6 @@
    "source": [
     "del(client)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -139,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
