Fix lifetime_calc notebook
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -135,7 +135,7 @@
     "fig, ax = plt.subplots(len(meas_resample))\n",
     "fig.suptitle('Resampled input data')\n",
     "for ax, (key, signal) in zip(ax, meas_resample.items()):\n",
-    "    ax.plot(signal.index, signal)"
+    "    ax.plot(signal)"
    ]
   },
   {
