Draft integration tests for Jupyter Notebooks using testbook
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -42,7 +42,7 @@
     "#fsel = np.array([30,50,80,460,605,1000])\n",
     "fsel = []\n",
     "fig = plt.figure()\n",
-    "plt.loglog(psd.index.values,psd)\n",
+    "plt.loglog(psd)\n",
     "txt = wd.Textarea(\n",
     "    value='',\n",
     "    placeholder='',\n",
@@ -78,10 +78,10 @@
    "source": [
     "def rms_psd(psd):\n",
     "    return (sum(((psd.diff()+psd).dropna().values.flatten()*np.diff(psd.index.values)))**0.5)\n",
-    "plt.loglog(psd.index.values,psd,label = \"rms = {:.2f}\".format(rms_psd(psd)))\n",
-    "for ii in np.linspace(0,1,4):\n",
-    "    psd_fit = psdSignal.psd_smoother(psd,fsel,ii)\n",
-    "    plt.loglog(psd_fit.index.values,psd_fit,label = \"rms = {:.2f}\".format(rms_psd(psd_fit)))\n",
+    "plt.loglog(psd, label=\"rms = {:.2f}\".format(rms_psd(psd)))\n",
+    "for i in np.linspace(0,1,4):\n",
+    "    psd_fit = psdSignal.psd_smoother(psd, fsel, i)\n",
+    "    plt.loglog(psd_fit, label=\"rms = {:.2f}\".format(rms_psd(psd_fit)))\n",
     "plt.legend()"
    ]
   },
