--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -45,11 +45,11 @@
    "outputs": [],
    "source": [
     "vm_mesh = pylife.vmap.VMAPImport(\"plate_with_hole.vmap\")\n",
-    "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
-    "               .join_coordinates()\n",
-    "               .join_variable('STRESS_CAUCHY')\n",
-    "               .join_variable('DISPLACEMENT')\n",
-    "               .to_frame())"
+    "mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
+    "        .join_coordinates()\n",
+    "        .join_variable('STRESS_CAUCHY')\n",
+    "        .join_variable('DISPLACEMENT')\n",
+    "        .to_frame())"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyLife_mesh['mises'] = pyLife_mesh.equistress.mises()"
+    "mesh['mises'] = mesh.equistress.mises()"
    ]
   },
   {
@@ -82,8 +82,8 @@
    "outputs": [],
    "source": [
     "threshold = .9 # factor of the maximum local value\n",
-    "pyLife_mesh['hotspot'] = pyLife_mesh.hotspot.calc(\"mises\", threshold)\n",
-    "display(pyLife_mesh[['x', 'y', 'z', 'mises', 'hotspot']])"
+    "mesh['hotspot'] = mesh.hotspot.calc(\"mises\", threshold)\n",
+    "display(mesh[['x', 'y', 'z', 'mises', 'hotspot']])"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"%d hotspots found over the threshold\" % pyLife_mesh['hotspot'].max())"
+    "print(\"%d hotspots found over the threshold\" % mesh['hotspot'].max())"
    ]
   },
   {
@@ -101,9 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
+    "grid = pv.UnstructuredGrid(*mesh.mesh.vtk_data())\n",
     "plotter = pv.Plotter(window_size=[1920, 1080])\n",
-    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')['hotspot'].first().to_numpy(),\n",
+    "plotter.add_mesh(grid, scalars=mesh.groupby('element_id')['hotspot'].first().to_numpy(),\n",
     "                show_edges=True, cmap='prism_r')\n",
     "plotter.add_scalar_bar()\n",
     "plotter.show()"
@@ -122,8 +122,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(pyLife_mesh[pyLife_mesh['hotspot'] == 1])"
+    "first_hotspot = mesh[mesh['hotspot'] == 1]\n",
+    "display(first_hotspot)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_hotspot = mesh[mesh['hotspot'] == 2]\n",
+    "display(second_hotspot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -135,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
