--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -306,7 +306,7 @@
     "damage = damage_sum_miner_haibach[\"total\"]\n",
     "\n",
     "di = np.logspace(np.log10(1e-1*damage), np.log10(1e2*damage), 1000)\n",
-    "std = pylife.utils.functions.scatteringRange2std(mat.TN)\n",
+    "std = pylife.utils.functions.scattering_range_to_std(mat.TN)\n",
     "failprob = fp.FailureProbability(D50, std).pf_simple_load(di)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
